--- a/TO DO.html
+++ b/TO DO.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link rel="stylesheet" href="To do.css">
-    
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
-     <script src="https://kit.fontawesome.com/e014ae98e3.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e014ae98e3.js" crossorigin="anonymous"></script>
+    <title>Todolist</title>
 </head>
 <body>
-
-    <header class="menu">
-          <div class="headerName"><span>To do</span> List</div>
-            </header> 
-
-
-
+<header class="menu">
+    <div class="headerName">
+        <span>To do</span>
+        List
+    </div>
+</header>
 <div class="conteiner">
     <div id="newtask">
         <input class="textInput" type="text" placeholder="Task to be done...">
         <button id="push">Add</button>
-        </div>
-        <div id="tasks">
-           
-        </div>
+    </div>
+    <div id="tasks">
+
+    </div>
+    <button onclick="sendGetRequest()">Test</button>
 </div>
-
-
 <footer>
     <p class="author">© 2021 Create Zvezdilin Sasha</p>
-   
-   <div class="social">
-     <a class="instgram" href="https://www.instagram.com/sidereal_161/"><i class="fab fa-instagram"></i></a>
-     <a class="vk" href="https://vk.com/alex.zvezd"><i class="fab fa-vk"></i></a>
+    <div class="social">
+        <a class="instgram" href="https://www.instagram.com/sidereal_161/"><i class="fab fa-instagram"></i></a>
+        <a class="vk" href="https://vk.com/alex.zvezd"><i class="fab fa-vk"></i></a>
+    </div>
 </footer>
-
-    <script src="Todo.js"></script>
+<script src="todo.js"></script>
+<script src="axios/axios_req.js"></script>
 </body>
 </html>
